--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <button class="btn btn-primary">Enviar</button>
                 </form>
             </aside>
-            <aside class="col-12 col-md-6 d-sm-none d-md-block">
+            <aside class="col-12 col-md-6 d-none d-md-block">
                 <img src="img/team.svg" alt="team" class="w-100">
             </aside>
         </section>
