se agrego el detalle de la unidad de medida en el  peso

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         </select>
                     </div>
                     <div class="mb-3">
-                        <label for="peso">Peso</label>
+                        <label for="peso">Peso <small class="text-muted">(Kg)</small></label>
                         <input type="text" id="peso" class="form-control">
                     </div>
                     <div class="mb-3">
