--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
     <main class="container my-3">
         <section class="row">
             <aside class="col-12 col-md-6">
-                <form class="bg-light p-3">
+                <form class="bg-light p-3" id="formGeneraciones">
                     <div class="mb-3">
-                        <label for="nombre">Nombre y apellido</label>
-                        <input type="text" id="nombre" class="form-control" required>
+                        <label for="nombre">Nombre y apellido *</label>
+                        <input type="text" id="nombre" class="form-control">
                         <div class="invalid-feedback">
                             prueba de feedback
                         </div>
                     </div>
                     <div class="mb-3">
-                        <label for="edad">Edad</label>
+                        <label for="edad">Edad *</label>
                         <input type="text" id="edad" class="form-control">
                     </div>
                     <div class="mb-3">
-                        <label for="dni">DNI</label>
+                        <label for="dni">DNI *</label>
                         <input type="text" id="dni" class="form-control">
                     </div>
                     <div class="mb-3">
@@ -51,12 +51,12 @@
                         <input type="text" id="peso" class="form-control">
                     </div>
                     <div class="mb-3">
-                        <label for="altura">Altura</label>
+                        <label for="altura">Altura  <small class="text-muted">(mts)</small></label>
                         <input type="text" id="altura" class="form-control">
                     </div>
                     <div class="mb-3">
-                        <label for="fechaNacimiento">Año de Nacimiento</label>
-                        <input type="month" id="fechaNacimiento" class="form-control">
+                        <label for="fechaNacimiento">Año de Nacimiento *<small class="text-muted">(desde 1930)</small></label>
+                        <input type="number" id="fechaNacimiento" class="form-control">
                     </div>
                     <button class="btn btn-primary" type="submit">Enviar</button>
                 </form>
