--- a/index.html
+++ b/index.html
@@ -11,64 +11,72 @@
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
     <title>Generaciones</title>
   </head>
   <body>
     <header class="text-center text-light container">
-        <h1 class="display-1 my-4 ">Generaciones</h1>
-        <hr>
+      <h1 class="display-1 my-4">Generaciones</h1>
+      <hr />
     </header>
     <main class="container my-3">
-        <section class="row">
-            <aside class="col-12 col-md-6">
-                <form class="bg-light p-3" id="formGeneraciones">
-                    <div class="mb-3">
-                        <label for="nombre">Nombre y apellido *</label>
-                        <input type="text" id="nombre" class="form-control">
-                        <div class="invalid-feedback">
-                            prueba de feedback
-                        </div>
-                    </div>
-                    <div class="mb-3">
-                        <label for="edad">Edad *</label>
-                        <input type="text" id="edad" class="form-control">
-                    </div>
-                    <div class="mb-3">
-                        <label for="dni">DNI *</label>
-                        <input type="text" id="dni" class="form-control">
-                    </div>
-                    <div class="mb-3">
-                        <label for="genero">Género</label>
-                        <select id="genero" class="form-control">
-                            <option value="">Seleccione una opcion</option>
-                            <option value="H">Hombre</option>
-                            <option value="M">Mujer</option>
-                        </select>
-                    </div>
-                    <div class="mb-3">
-                        <label for="peso">Peso <small class="text-muted">(Kg)</small></label>
-                        <input type="text" id="peso" class="form-control">
-                    </div>
-                    <div class="mb-3">
-                        <label for="altura">Altura  <small class="text-muted">(mts)</small></label>
-                        <input type="text" id="altura" class="form-control">
-                    </div>
-                    <div class="mb-3">
-                        <label for="fechaNacimiento">Año de Nacimiento *<small class="text-muted">(desde 1930)</small></label>
-                        <input type="number" id="fechaNacimiento" class="form-control">
-                    </div>
-                    <button class="btn btn-primary" type="submit">Enviar</button>
-                </form>
-            </aside>
-            <aside class="col-12 col-md-6 d-none d-md-block">
-                <img src="img/team.svg" alt="team" class="w-100">
-            </aside>
-        </section>
-        
+      <section class="row">
+        <aside class="col-12 col-md-6">
+          <form class="bg-light p-3" id="formGeneraciones">
+            <div class="mb-3">
+              <label for="nombre">Nombre y apellido *</label>
+              <input type="text" id="nombre" class="form-control" />
+              <div class="invalid-feedback">prueba de feedback</div>
+            </div>
+            <div class="mb-3">
+              <label for="edad">Edad *</label>
+              <input type="text" id="edad" class="form-control" />
+            </div>
+            <div class="mb-3">
+              <label for="dni">DNI *</label>
+              <input type="text" id="dni" class="form-control" />
+            </div>
+            <div class="mb-3">
+              <label for="genero">Género</label>
+              <select id="genero" class="form-control">
+                <option value="">Seleccione una opcion</option>
+                <option value="H">Hombre</option>
+                <option value="M">Mujer</option>
+              </select>
+            </div>
+            <div class="mb-3">
+              <label for="peso"
+                >Peso <small class="text-muted">(Kg)</small></label
+              >
+              <input type="text" id="peso" class="form-control" />
+            </div>
+            <div class="mb-3">
+              <label for="altura"
+                >Altura <small class="text-muted">(mts)</small></label
+              >
+              <input type="text" id="altura" class="form-control" />
+            </div>
+            <div class="mb-3">
+              <label for="fechaNacimiento"
+                >Año de Nacimiento *<small class="text-muted"
+                  >(desde 1930)</small
+                ></label
+              >
+              <input type="number" id="fechaNacimiento" class="form-control" />
+            </div>
+            <button class="btn btn-primary" type="submit">Enviar</button>
+            <button class="btn btn-primary" type="button" id="mostrardatos">mostrar datos</button>
+            <div class="alert alert-danger mt-3 d-none" role="alert" id="msjError">
+            </div>
+          </form>
+        </aside>
+        <aside class="col-12 col-md-6 d-none d-md-block">
+          <img src="img/team.svg" alt="team" class="w-100" />
+        </aside>
+      </section>
     </main>
     <footer class="bg-dark text-light text-center py-4">
-        <p>&copy; Todos los derechos reservados</p>
+      <p>&copy; Todos los derechos reservados</p>
     </footer>
     <!-- JavaScript Bundle with Popper -->
     <script
