--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <input type="number" id="fechaNacimiento" class="form-control" />
             </div>
             <button class="btn btn-primary" type="submit">Enviar</button>
-            <button class="btn btn-primary" type="button" id="mostrardatos">mostrar datos</button>
+            
             <div class="alert alert-danger mt-3 d-none" role="alert" id="msjError">
             </div>
           </form>
@@ -73,6 +73,20 @@
         <aside class="col-12 col-md-6 d-none d-md-block">
           <img src="img/team.svg" alt="team" class="w-100" />
         </aside>
+      </section>
+      <section class="container bg-light my-4 rounded-3 d-none" id="datosExtras">
+        <article class="bg-light p-2">
+          <h3 id="persona" class="mt-3"> <i class="bi bi-person-badge"></i> Persona: </h3>
+          <hr>
+          <button class="btn btn-primary" id="mostrarDatos">
+            Mostrar datos <i class="bi bi-clipboard"></i>
+          </button>
+          <button class="btn btn-primary" id="mostrarGeneracion">
+            Mostrar generacion <i class="bi bi-card-checklist"></i>
+          </button>
+          <hr>
+          <div id="detalle" class="mt-4"></div>
+        </article>
       </section>
     </main>
     <footer class="bg-dark text-light text-center py-4">
